--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <section id="gallery">
           <section class="gallery">
             <figure class="item">
-              <a href="https://github.com" target="_blank">
+              <a href="https://alex-correa.netlify.app/#home" target="_blank">
                 <img src="images/portfolio-image.png" alt="" />
               </a>
 
